system debug added latest...

--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -1,7 +1,7 @@
 public class AccHandler {
    public static void method1(){
     
-	system.debug('testing ');
+	system.debug('testing 123');
    
    }
 
