updated two debug statments...

--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -1,7 +1,8 @@
 public class AccHandler {
    public static void method1(){
     
-	system.debug('testing ');
+	system.debug('statement 1');
+	system.debug('statement  2');
    
    }
 
