only the changed class...

--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -3,6 +3,8 @@ public class AccHandler {
     
 	system.debug('statement 1');
 	system.debug('statement  2');
+	system.debug('statement 3');
+	system.debug('statement  4');
    
    }
 
