updated account page file.....

--- a/force-app/main/default/classes/AccountHomePage.cls
+++ b/force-app/main/default/classes/AccountHomePage.cls
@@ -18,6 +18,7 @@ public class AccountHomePage {
             email1.setsenderDisplayname('KUMAR');
             messaging.Email[] email=new messaging.Email[]{email1};
                 messaging.sendemail(email);
+				system.debug('tetstst');
             return new pagereference('/apex/test11?id='+acc.id);
         }
     }
