--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -5,6 +5,7 @@ public class AccHandler {
 	system.debug('statement  2');
 	system.debug('statement 3');
 	system.debug('statement  4');
+   system.debug('statement  5');
    
    }
 
