--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -1,12 +1,13 @@
 public class AccHandler {
    public static void method1(){
-    
 	system.debug('statement 1');
-	system.debug('statement  2');
-	system.debug('statement 3');
-	system.debug('statement  4');
-   system.debug('statement  5');
+	system.debug('statement 2 updated form mar branch...');
    
    }
+   public static void method2(){
+      system.debug('statement 1');
+      system.debug('statement 2 updated form mar branch...');
+      
+      }
 
 }
