--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -10,4 +10,9 @@ public class AccHandler {
          system.debug('statement 2 updated form mar branch...');
          
          }
+	public static void method3(){
+         system.debug('statement 1');
+         system.debug('statement 2 updated form mar branch...');
+         
+         }
 }
