--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -15,5 +15,10 @@ public class AccHandler {
          system.debug('statement 2 updated form mar branch...');
          
          }
+	public static void method4(){
+         system.debug('statement 1');
+         system.debug('statement 2 updated form mar branch...');
+         
+         }
 
 }
