--- a/force-app/main/default/classes/AccHandler.cls
+++ b/force-app/main/default/classes/AccHandler.cls
@@ -9,4 +9,11 @@ public class AccHandler {
          system.debug('statement 2 updated form mar branch...');
          
          }
+
+	public static void method3(){
+         system.debug('statement 1');
+         system.debug('statement 2 updated form mar branch...');
+         
+         }
+
 }
